force-app/code/objects/URE_Log_Entry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Routing engine phase that generated this entry.</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>CONFIG</fullName>
            </value>
            <value>
                <fullName>CONDITION_BIND</fullName>
            </value>
            <value>
                <fullName>QUERY_BUILD</fullName>
            </value>
            <value>
                <fullName>CANDIDATE</fullName>
            </value>
            <value>
                <fullName>LOCK</fullName>
            </value>
            <value>
                <fullName>ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>AUDIT</fullName>
            </value>
            <value>
                <fullName>PERFORMANCE</fullName>
            </value>
            <value>
                <fullName>VALIDATION</fullName>
            </value>
            <value>
                <fullName>SECURITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>