force-app/code/objects/URE_Log_Entry__c/fields/Cpu_At_Point_Ms__c.field-meta.xml
<CustomField>
    <fullName>Cpu_At_Point_Ms__c</fullName>
    <description>CPU milliseconds consumed at entry time. Always populated (free read).</description>
    <label>CPU At Point (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>