force-app/code/objects/URE_Log_Entry__c/fields/Dml_At_Point__c.field-meta.xml
<CustomField>
    <fullName>Dml_At_Point__c</fullName>
    <description>DML statements consumed at entry time. Always populated (free read).</description>
    <label>DML At Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>