force-app/code/objects/URE_Log_Entry__c/fields/Elapsed_Ms__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Ms__c</fullName>
    <description>Milliseconds since URE_Logger.init() was called.</description>
    <label>Elapsed (ms)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>