force-app/code/objects/URE_Log_Entry__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Exception.getTypeName(). Present only on ERROR/FATAL entries.</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>