force-app/code/objects/URE_Log_Entry__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Human-readable log message. Never contains raw field values or PII.</description>
    <label>Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>