force-app/code/objects/URE_Log_Entry__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <description>SObject API name being routed at the time of this entry.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>