force-app/code/objects/URE_Log_Entry__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>18-char Id of the candidate record (if applicable).</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>